regression/fail/modules.35.sml
functor F (ZZZ: sig end) = struct end
structure Z = ZZZ
